--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@
 }
 :root {
 	--index: calc(1vw + 1vh);
-	--transition: 900ms cubic-bezier(.2, .6, 0, 1);
+	--transition: all 500ms cubic-bezier(0.250, 0.100, 0.250, 1.000); /* ease (default) */
 }
 html, body {
 	height: 100%;
